@@ -6,6 +6,8 @@
 	(folder_tracking_finalize)
 	(_tny_camel_folder_track_folder_changed)
 	(tny_camel_folder_finalize): user_data is now priv instead of self
+	(folder_tracking_changed): do not do anything if the folder is
+	already loaded as the folder_changed signal will handle the changes
 
 2009-07-14  Sergio Villar Senin  <svillar@igalia.com>
 
